Improve UI text to explain metabolism tracker to users

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,11 @@
   <title>Clinic Metabolism Tracker</title>
 </head>
 <body>
-  <h1>Clinic Metabolism Tracker</h1>
+<h1>Metabolism Tracker</h1>
+<p>
+  This simple tool lets you add patients and record their daily metabolism-related data
+  (weight, calories, mood, sleep). Data is stored in a small backend API built for this coursework.
+</p>
 
   <section id="patient-section">
     <h2>Add Patient</h2>
