Add Activity Level dropdown to patient form

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,8 +42,18 @@
       Email:
       <input id="patient-email" type="email">
     </label><br><br>
+    
+    <label>
+      Activity Level:
+      <select id="patient-activityLevel">
+      <option value="">-- Select --</option>
+      <option value="low">Low</option>
+      <option value="medium" selected>Medium</option>
+      <option value="high">High</option>
+    </select>
+   </label><br><br>
 
-    <button id="add-patient-btn">Add Patient</button>
+   <button id="add-patient-btn">Add Patient</button>
 
     <h3>Existing Patients</h3>
     <button id="refresh-patients-btn">Refresh Patients</button><br><br>
