--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,6 +81,12 @@
     </label><br><br>
 
     <label>
+  Height (cm):
+  <input type="number" step="0.1" id="record-height">
+</label><br><br>
+
+
+    <label>
       BMI:
       <input type="number" step="0.1" id="record-bmi">
     </label><br><br>
