--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,129 +1,144 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Clinic Metabolism Tracker</title>
+
+  <style>
+    .recent-record {
+      background-color: #fff3cd; /* soft yellow highlight */
+    }
+  </style>
 </head>
+
 <body>
 <h1>Metabolism Tracker</h1>
 <p>
-  This simple tool lets you add patients and record their daily metabolism-related data
-  (weight, calories, mood, sleep). Data is stored in a small backend API built for this coursework.
+  This tool lets you add patients and record their daily metabolism-related data.
+  Data is stored in a backend API created for this coursework.
 </p>
 
-  <section id="patient-section">
-    <h2>Add Patient</h2>
-    <label>
-      Full name:
-      <input id="patient-fullName" type="text">
-    </label><br><br>
+<section id="patient-section">
+  <h2>Add Patient</h2>
 
-    <label>
-      Age:
-      <input id="patient-age" type="number" min="0">
-    </label><br><br>
+  <label>
+    Full name:
+    <input id="patient-fullName" type="text">
+  </label><br><br>
 
-    <label>
-      Gender:
-      <select id="patient-gender">
-        <option value="">-- Select --</option>
-        <option value="Female">Female</option>
-        <option value="Male">Male</option>
-        <option value="Other">Other</option>
-      </select>
-    </label><br><br>
+  <label>
+    Age:
+    <input id="patient-age" type="number" min="0">
+  </label><br><br>
 
-    <label>
-      Phone:
-      <input id="patient-phone" type="text">
-    </label><br><br>
-
-    <label>
-      Email:
-      <input id="patient-email" type="email">
-    </label><br><br>
-    
-    <label>
-      Activity Level:
-      <select id="patient-activityLevel">
+  <label>
+    Gender:
+    <select id="patient-gender">
       <option value="">-- Select --</option>
-      <option value="low">Low</option>
-      <option value="medium" selected>Medium</option>
-      <option value="high">High</option>
+      <option value="Female">Female</option>
+      <option value="Male">Male</option>
+      <option value="Other">Other</option>
     </select>
-   </label><br><br>
+  </label><br><br>
 
-   <button id="add-patient-btn">Add Patient</button>
+  <label>
+    Phone:
+    <input id="patient-phone" type="text">
+  </label><br><br>
 
-    <h3>Existing Patients</h3>
-    <button id="refresh-patients-btn">Refresh Patients</button><br><br>
+  <label>
+    Email:
+    <input id="patient-email" type="email">
+  </label><br><br>
 
-    <select id="patient-select">
-      <option value="">-- Select patient --</option>
+  <!-- NEW: Activity Level -->
+  <label>
+    Activity Level:
+    <select id="patient-activityLevel">
+      <option value="">-- Select --</option>
+      <option value="Low">Low</option>
+      <option value="Moderate">Moderate</option>
+      <option value="High">High</option>
     </select>
-  </section>
+  </label><br><br>
 
-  <hr>
+  <button id="add-patient-btn">Add Patient</button>
 
-  <section id="records-section">
-    <h2>Metabolism Records</h2>
-    <p id="selected-patient-label">No patient selected.</p>
+  <h3>Existing Patients</h3>
+  <button id="refresh-patients-btn">Refresh Patients</button><br><br>
 
-    <h3>Add Record</h3>
-    <label>
-      Date:
-      <input type="date" id="record-date">
-    </label><br><br>
+  <select id="patient-select">
+    <option value="">-- Select patient --</option>
+  </select>
+</section>
 
-    <label>
-      Weight (kg):
-      <input type="number" step="0.1" id="record-weight">
-    </label><br><br>
+<hr>
 
-    <label>
-  Height (cm):
-  <input type="number" step="0.1" id="record-height">
-</label><br><br>
+<section id="records-section">
+  <h2>Metabolism Records</h2>
+  <p id="selected-patient-label">No patient selected.</p>
 
+  <h3>Add Record</h3>
 
-    <label>
-      BMI:
-      <input type="number" step="0.1" id="record-bmi">
-    </label><br><br>
+  <label>
+    Date:
+    <input type="date" id="record-date">
+  </label><br><br>
 
-    <label>
-      BMR:
-      <input type="number" step="1" id="record-bmr">
-    </label><br><br>
+  <label>
+    Weight (kg):
+    <input type="number" step="0.1" id="record-weight">
+  </label><br><br>
 
-    <label>
-      Notes:
-      <input id="record-notes" type="text">
-    </label><br><br>
+  <!-- NEW: Height field used for auto BMI calculation -->
+  <label>
+    Height (cm):
+    <input type="number" step="0.1" id="record-height">
+  </label><br><br>
 
-    <button id="add-record-btn">Add Record</button>
+  <label>
+    BMI:
+    <input type="number" step="0.1" id="record-bmi" readonly>
+  </label><br><br>
 
-    <h3>Existing Records</h3>
-    <table border="1" cellpadding="4">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Date</th>
-          <th>Weight (kg)</th>
-          <th>BMI</th>
-          <th>BMR</th>
-          <th>Notes</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody id="records-table-body">
-        <!-- Records will be inserted here by JavaScript -->
-      </tbody>
-    </table>
-  </section>
+  <label>
+    BMR:
+    <input type="number" step="1" id="record-bmr">
+  </label><br><br>
 
-  <p id="message" style="color: green;"></p>
+  <label>
+    Notes:
+    <input id="record-notes" type="text">
+  </label><br><br>
 
-  <script src="app.js"></script>
+  <button id="add-record-btn">Add Record</button>
+
+  <h3>Existing Records</h3>
+
+  <table border="1" cellpadding="4">
+    <thead>
+    <tr>
+      <th>ID</th>
+      <th>Date</th>
+      <th>Weight (kg)</th>
+      <th>Height (cm)</th>
+      <th>BMI</th>
+      <th>BMR</th>
+      <th>Notes</th>
+      <th>Actions</th>
+    </tr>
+    </thead>
+
+    <tbody id="records-table-body">
+      <!-- Rows added by JavaScript -->
+    </tbody>
+  </table>
+</section>
+
+<p id="message" style="color: green;"></p>
+
+<script src="app.js"></script>
+
 </body>
 </html>
