--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,143 +2,181 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Clinic Metabolism Tracker</title>
-
+  <meta charset="UTF-8" />
+  <title>Metabolism Tracker</title>
   <style>
-    .recent-record {
-      background-color: #fff3cd; /* soft yellow highlight */
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1, h2, h3 {
+      margin-top: 20px;
+    }
+
+    .container {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      align-items: flex-start;
+      margin-top: 30px;
+    }
+
+    .box {
+      border: 1px solid #ccc;
+      padding: 20px;
+      width: 45%;
+      background: #fafafa;
+      border-radius: 8px;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 15px;
+    }
+
+    th, td {
+      border: 1px solid #aaa;
+      padding: 6px;
+    }
+
+    tr.highlight {
+      background-color: rgba(198, 255, 198, 0.6);
+    }
+
+    #message {
+      margin-top: 20px;
+      font-weight: bold;
     }
   </style>
 </head>
 
 <body>
-<h1>Metabolism Tracker</h1>
-<p>
-  This tool lets you add patients and record their daily metabolism-related data.
-  Data is stored in a backend API created for this coursework.
-</p>
 
-<section id="patient-section">
-  <h2>Add Patient</h2>
+  <h1>Metabolism Tracker</h1>
 
-  <label>
-    Full name:
-    <input id="patient-fullName" type="text">
-  </label><br><br>
+  <div class="container">
 
-  <label>
-    Age:
-    <input id="patient-age" type="number" min="0">
-  </label><br><br>
+    <!-- LEFT SIDE: PATIENT FORM -->
+    <div class="box">
+      <h2>Add Patient</h2>
 
-  <label>
-    Gender:
-    <select id="patient-gender">
-      <option value="">-- Select --</option>
-      <option value="Female">Female</option>
-      <option value="Male">Male</option>
-      <option value="Other">Other</option>
-    </select>
-  </label><br><br>
+      <label>Full Name:<br>
+        <input id="patient-fullName" type="text" />
+      </label><br><br>
 
-  <label>
-    Phone:
-    <input id="patient-phone" type="text">
-  </label><br><br>
+      <label>Age:<br>
+        <input id="patient-age" type="number" min="0" />
+      </label><br><br>
 
-  <label>
-    Email:
-    <input id="patient-email" type="email">
-  </label><br><br>
+      <label>Gender:<br>
+        <select id="patient-gender">
+          <option value="">-- Select --</option>
+          <option value="Female">Female</option>
+          <option value="Male">Male</option>
+          <option value="Other">Other</option>
+        </select>
+      </label><br><br>
 
-  <!-- NEW: Activity Level -->
-  <label>
-    Activity Level:
-    <select id="patient-activityLevel">
-      <option value="">-- Select --</option>
-      <option value="Low">Low</option>
-      <option value="Moderate">Moderate</option>
-      <option value="High">High</option>
-    </select>
-  </label><br><br>
+      <label>Phone:<br>
+        <input id="patient-phone" type="text" />
+      </label><br><br>
 
-  <button id="add-patient-btn">Add Patient</button>
+      <label>Email:<br>
+        <input id="patient-email" type="email" />
+      </label><br><br>
 
-  <h3>Existing Patients</h3>
-  <button id="refresh-patients-btn">Refresh Patients</button><br><br>
+      <label>Activity Level:<br>
+        <select id="patient-activityLevel">
+          <option value="">-- Select --</option>
+          <option value="Low">Low — Mostly sedentary lifestyle</option>
+          <option value="Moderate">Moderate — Light exercise 1–3 days/week</option>
+          <option value="High">High — Intense activity 4+ days/week</option>
+        </select>
+      </label><br><br>
 
-  <select id="patient-select">
-    <option value="">-- Select patient --</option>
-  </select>
-</section>
+      <button id="add-patient-btn">Add Patient</button>
 
-<hr>
+      <h3>Search Patients</h3>
+      <input id="patient-search" type="text" placeholder="Search by name..." />
+      
+      <h3>Patients</h3>
+      <select id="patient-select" size="6" style="width: 100%"></select>
+      <br><br>
+      <button id="refresh-patients-btn">Refresh List</button>
 
-<section id="records-section">
-  <h2>Metabolism Records</h2>
-  <p id="selected-patient-label">No patient selected.</p>
+    </div>
 
-  <h3>Add Record</h3>
 
-  <label>
-    Date:
-    <input type="date" id="record-date">
-  </label><br><br>
+    <!-- RIGHT SIDE: RECORDS -->
+    <div class="box">
+      <h2>Metabolism Records</h2>
+      <p id="selected-patient-label">No patient selected.</p>
 
-  <label>
-    Weight (kg):
-    <input type="number" step="0.1" id="record-weight">
-  </label><br><br>
+      <h3>Add Record</h3>
 
-  <!-- NEW: Height field used for auto BMI calculation -->
-  <label>
-    Height (cm):
-    <input type="number" step="0.1" id="record-height">
-  </label><br><br>
+      <label>DOB (Date of Birth):<br>
+        <input id="record-date" type="date" />
+      </label><br><br>
 
-  <label>
-    BMI:
-    <input type="number" step="0.1" id="record-bmi" readonly>
-  </label><br><br>
+      <label>Height (cm):<br>
+        <input id="record-height" type="number" />
+      </label><br><br>
 
-  <label>
-    BMR:
-    <input type="number" step="1" id="record-bmr">
-  </label><br><br>
+      <label>Weight (kg):<br>
+        <input id="record-weight" type="number" step="0.1" />
+      </label><br><br>
 
-  <label>
-    Notes:
-    <input id="record-notes" type="text">
-  </label><br><br>
+      <label>BMI:<br>
+        <input id="record-bmi" type="number" step="0.1" readonly />
+      </label><br><br>
 
-  <button id="add-record-btn">Add Record</button>
+      <label>BMI Category:<br>
+        <select id="bmi-category">
+          <option value="">Auto-selected</option>
+          <option value="Underweight">Underweight</option>
+          <option value="Healthy Weight">Healthy Weight</option>
+          <option value="Overweight">Overweight</option>
+          <option value="Obesity Class 1">Obesity Class 1</option>
+          <option value="Obesity Class 2">Obesity Class 2</option>
+          <option value="Obesity Class 3">Obesity Class 3</option>
+        </select>
+      </label><br><br>
 
-  <h3>Existing Records</h3>
+      <label>BMR:<br>
+        <input id="record-bmr" type="number" />
+      </label><br><br>
 
-  <table border="1" cellpadding="4">
-    <thead>
-    <tr>
-      <th>ID</th>
-      <th>Date</th>
-      <th>Weight (kg)</th>
-      <th>Height (cm)</th>
-      <th>BMI</th>
-      <th>BMR</th>
-      <th>Notes</th>
-      <th>Actions</th>
-    </tr>
-    </thead>
+      <label>Notes:<br>
+        <input id="record-notes" type="text" />
+      </label><br><br>
 
-    <tbody id="records-table-body">
-      <!-- Rows added by JavaScript -->
-    </tbody>
-  </table>
-</section>
+      <button id="add-record-btn">Add Record</button>
 
-<p id="message" style="color: green;"></p>
+      <h3>Existing Records</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>DOB</th>
+            <th>Height</th>
+            <th>Weight</th>
+            <th>BMI</th>
+            <th>BMR</th>
+            <th>Notes</th>
+          </tr>
+        </thead>
+        <tbody id="records-table-body"></tbody>
+      </table>
 
-<script src="app.js"></script>
+    </div>
+  </div>
 
+  <p id="message"></p>
+
+  <script src="app.js"></script>
 </body>
 </html>
