Add attribution comment and author modifications note

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,5 @@
+
+//this code made by chatgpt that follows the instructions given by me to make it work as it is expected to.
 <!DOCTYPE html>
 <html lang="en">
 <head>
